# fundamentum

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: CHECKLIST.md  COMPARISON.md  INTEGRATION_GUIDE.md  MIGRATION.md  OBSERVABILITY.md  OBSERVABILITY_CHANGES.md  README.md  SUMMARY.md  TRACE_ID_GUIDE.md  USAGE_GUIDE.md
docs/api/: http.md  observability.md  settings.md  testing.md
examples/: observability_setup.py
src/fundamentum/: __init__.py
src/fundamentum/infra/: __init__.py
src/fundamentum/infra/http/: __init__.py  client.py  models.py  registry.py
src/fundamentum/infra/http/testing/: __init__.py  helpers.py  transport.py
src/fundamentum/infra/observability/: __init__.py  context.py  helpers.py  logging.py  middleware.py
src/fundamentum/infra/settings/: __init__.py  base.py  protocols.py  registry.py
src/fundamentum/utils/: __init__.py
tests/infra/http/: test_client.py  test_endpoint_registry.py  test_models.py
tests/infra/http/testing/: test_testing_helpers.py
tests/infra/observability/: test_context.py  test_helpers.py  test_logging.py  test_middleware.py
tests/infra/settings/: test_base.py  test_registry.py  test_settings_registry.py
