[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funndamentum"
version = "0.0.0"
description = "All common core structure and functions to be used on dogusky.cloud"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Douglas Silva" }
]

dependencies = [
  "fastapi>=0.128",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
