[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundamentum"
version = "0.1.1"
description = "All common core structure and functions to be used on dogusky.cloud"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Douglas Silva" }
]

dependencies = [
  "fastapi>=0.128",
  "httpx>=0.28",
  "pydantic-settings>=2.12.0",
  "python-json-logger>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pydantic[settings]>=2.12.5",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
